--- a/style.css
+++ b/style.css
@@ -1,6 +1,59 @@
-body{
-    background-color: #f0f0f0;
-    font-family: Calibri;
+body {
+    background-color: #f6fff9;  /* soft minty white */
+    color: #000000;
+    font-family: Calibri, sans-serif;
+    line-height: 1.5;
     margin: 0;
-    padding: 20px;
+    scroll-behavior: smooth;
+}
+
+nav {
+    position: fixed;
+    width: 100%;
+    background-color: #14532d; /* dark green */
+    padding: 1rem;
+
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    justify-content: right;
+    gap: 2rem;
+    margin: 5px 40px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #f6fff9;
+    font-weight: bold;
+}
+
+nav ul li a:hover {
+    text-decoration: highlight;
+}
+
+section {
+    padding: 100px 20px;
+    max-width: 900px;
+    margin: auto;
+}
+
+h2 {
+    color: #000000; /* mint green */
+}
+
+footer {
+    text-align: center;
+    padding: 2rem;
+    background-color: #14532d; /* dark green */
+    color: #f6fff9;
+}
+
+ul li {
+    margin-bottom: 0.5rem;
+}
+
+a {
+    color: #2e8b6d; /* deeper mint green for links */
 }
